<resources>
    <string name="app_name">Wagba</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="LoginText">Login with your Credentials please</string>
    <string name="SignupText">Enter Your Data to Sign Up</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="emailhint">within ENG ASU domain</string>
    <string name="passwordhint">8 characters contain at least a number and an Uppercase letter</string>
    <string name="firstnamehint">First Name</string>
    <string name="lastnamehint">Last Name</string>
    <string name="reenterpasswordhint">Re-enter your password</string>
    <string name="incrementtext">+</string>
    <string name="decrementtext">-</string>
    <string name="duetag">Due Amount:</string>
    <string name="dueamount">40 LE</string>
    <string name="cardnumber">Credit Card Number</string>
    <string name="expirydate">Expiry Date</string>
    <string name="ccv">CCV</string>
    <string name="cardholdername">CardHolder Name</string>
    <string name="save">Save</string>
    <string name="creditcardinfotextview">Enter your Payment card info please</string>
    <string name="restaurant_name">Restaurant name</string>
    <string name="dish_name">Dish name</string>
    <string name="restaurant_location_hint">Restaurant Location hint</string>
    <string name="item_price">Price:30 LE</string>
    <string name="checkout">Checkout</string>
    <string name="go_to_cart">go to cart</string>
    <string name="proceed">Proceed</string>
    <string name="main">Main</string>
    <string name="cart">Cart</string>
    <string name="your_age">Your Age</string>
    <string name="update">Update</string>
    <string name="your_profile">Your Profile</string>
    <string name="phonehint">+201.. phone number</string>
    <string name="sign_out">Sign Out</string>
    <string name="order_id">Order Id</string>
    <string name="delivery_gate_3">Delivery Gate: 3</string>
    <string name="order_status">Order Status:Received</string>
    <string name="male_or_female">Male or Female?</string>
</resources>