<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profile_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/oriental_food"
    tools:context=".AuthenticationScreens.LoginScreen">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardBackgroundColor="@color/white"

        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="20dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:id="@+id/payment_inner_linearlayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                tools:context=".AuthenticationScreens.LoginScreen"
                tools:ignore="MissingClass">

                <TextView
                    android:id="@+id/textView"
                    style="@style/textviews"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/SignupText"

                    />

                <EditText
                    android:id="@+id/edittextfirstname"
                    style="@style/edittexts"
                    android:layout_width="wrap_content"
                    android:background="@drawable/edit_text_bg"
                    android:drawableLeft="@drawable/name_icon"
                    android:hint="@string/firstnamehint"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/edittextlastname"
                    style="@style/edittexts"

                    android:layout_width="wrap_content"
                    android:background="@drawable/edit_text_bg"
                    android:drawableLeft="@drawable/name_icon"
                    android:hint="@string/lastnamehint"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/edittextage"
                    style="@style/edittexts"
                    android:layout_width="wrap_content"
                    android:background="@drawable/edit_text_bg"
                    android:drawableLeft="@drawable/age_icon"
                    android:hint="@string/your_age"
                    android:inputType="number" />

                <EditText
                    android:id="@+id/genders"
                    style="@style/edittexts"
                    android:layout_width="wrap_content"
                    android:background="@drawable/edit_text_bg"
                    android:drawableLeft="@drawable/gender_icon"
                    android:hint="@string/male_or_female"
                    android:inputType="text" />


                <EditText
                    android:id="@+id/email"

                    style="@style/edittexts"
                    android:layout_width="wrap_content"
                    android:background="@drawable/edit_text_bg"
                    android:drawableLeft="@drawable/emailicon"
                    android:hint="@string/emailhint"
                    android:inputType="textEmailAddress" />

                <EditText
                    android:id="@+id/password"
                    style="@style/edittexts"
                    android:layout_width="wrap_content"

                    android:background="@drawable/edit_text_bg"
                    android:drawableLeft="@drawable/passwordicon"
                    android:hint="@string/passwordhint"
                    android:inputType="textPassword" />

                <EditText
                    android:id="@+id/phonenumber"
                    style="@style/edittexts"
                    android:layout_width="wrap_content"

                    android:background="@drawable/edit_text_bg"
                    android:drawableLeft="@drawable/phoneicon"
                    android:hint="@string/phonehint"
                    android:inputType="phone" />

                <EditText
                    android:id="@+id/reenterpassword"
                    style="@style/edittexts"
                    android:layout_width="wrap_content"
                    android:background="@drawable/edit_text_bg"

                    android:drawableLeft="@drawable/passwordicon"
                    android:hint="@string/reenterpasswordhint"
                    android:inputType="textPassword" />


                <Button
                    android:id="@+id/signup"
                    style="@style/buttons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signup" />
            </LinearLayout>


        </ScrollView>



    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>