<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GeneralScreens.PaymentScreen">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/duetag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/duetag"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dueamount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="200dp"
        android:text="@string/dueamount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/duetag"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/deliveryorpickup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/duetag">

        <RadioButton
            android:id="@+id/pickup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"

            android:text="self pickup" />

        <RadioButton
            android:id="@+id/delivery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Delivery" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/cashorcredit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deliveryorpickup">

        <RadioButton
            android:id="@+id/credit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="CreditCard" />

        <RadioButton
            android:id="@+id/Cash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Cash" />

    </RadioGroup>

    <LinearLayout
        android:id="@id/creditcardinfocardview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/cashorcredit">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/payment_card_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:outlineAmbientShadowColor="@color/cardshadow"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            app:cardMaxElevation="20dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="@color/cardborders"
            app:strokeWidth="3dp">

            <LinearLayout
                android:id="@+id/payment_inner_linearlayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                tools:context=".AuthenticationScreens.LoginScreen"
                tools:ignore="MissingClass">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/creditcardinfotextview"
                    style="@style/textviews"

                    />

                <EditText
                    android:id="@+id/cardnumber_edittext"

                    style="@style/edittexts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_bg"
                    android:drawableLeft="@drawable/passwordicon"
                    android:hint="@string/cardnumber"
                    android:inputType="number" />


                <EditText
                    android:id="@+id/card_expiry_date_edittext"
                    style="@style/edittexts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_bg"
                    android:drawableLeft="@drawable/calendar_icon"
                    android:hint="@string/expirydate"
                    android:inputType="date" />

                <EditText
                    android:id="@+id/ccv"
                    style="@style/edittexts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_bg"
                    android:drawableLeft="@drawable/ccv_icon"
                    android:hint="@string/ccv"
                    android:inputType="number" />

                <EditText
                    android:id="@+id/cardholdername"
                    style="@style/edittexts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_bg"
                    android:drawableLeft="@drawable/emailicon"
                    android:hint="@string/cardholdername"
                    android:inputType="text" />

                <Button
                    android:id="@+id/Save_button"
                    style="@style/buttons"
                    android:layout_width="109dp"
                    android:layout_height="63dp"
                    android:text="@string/save" />


            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>

    <Button
        style="@style/buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/creditcardinfocardview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="60dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>