<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:id="@+id/cart_item_layout"
    >

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:elevation="20dp"
        android:backgroundTint="@color/cardfilling"
        android:outlineAmbientShadowColor="@color/cardshadow"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/cardborders"
        app:strokeWidth="3dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cart_card_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/cart_item_imagecard"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerHorizontal="true"
                app:cardCornerRadius="100dp"
                android:layout_margin="5dp"
                app:layout_constraintBottom_toBottomOf="@+id/cart_card_layout"
                app:layout_constraintEnd_toStartOf="@+id/item_name"
                app:layout_constraintStart_toStartOf="@+id/cart_card_layout"
                app:layout_constraintTop_toTopOf="@+id/cart_card_layout"
                >
                <ImageView
                    android:id="@+id/item_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/wagba" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/item_name"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                style="@style/textviews"
                android:text="@string/dish_name"
                android:gravity="center"
                app:layout_constraintTop_toTopOf="parent"
                android:textSize="24dp"

                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/item_price"
                style="@style/textviews"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:gravity="center"
                android:text="@string/item_price"
                android:textColor="@color/shadowbg"
                android:textSize="18dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/item_name" />

            <LinearLayout
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/cart_item_imagecard"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/items_add_remove_layout"
                android:layout_marginBottom="10dp">
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/increment"
                    style="@style/incrementdecrementbutton"
                    android:background="@drawable/rounded_buttons_green"
                    android:text="@string/incrementtext"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:id="@+id/item_count"
                    android:text="1"
                    />
                <androidx.appcompat.widget.AppCompatButton
                    android:background="@drawable/rounded_buttons_red"
                    android:id="@+id/decrement"
                    style="@style/incrementdecrementbutton.remove"
                    android:text="@string/decrementtext"
                    />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>